[metadata]
name = UltraPhyx
version = 0.1.0
author = George Kassis
description = Physics-grounded ultrasound data augmentation library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gkassis05/UltraPhyx
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Applications
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = UltraPhyx
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy>=1.20
    opencv-python>=4.5
    matplotlib>=3.5
    torch>=1.12

[options.package_data]
UltraPhyx = *.txt, *.md

[flake8]
max-line-length = 88
ignore = E501
